♻️ Refactor type schedule
